chore: added border to related jobs. Also fixed job tags width and spacing.

--- a/sheet.css
+++ b/sheet.css
@@ -7,7 +7,7 @@
 header{
     display: flex;
     padding: 1em;
-    justify-content: space-between;
+    justify-content:center;
     position: sticky;
     width: 100% ;
     height: 145px;
@@ -80,6 +80,11 @@ main{
     background-color: #ffffff;
 }
 
+.logo-container{
+  display: flex;
+
+}
+
 body{
     width: 100%;
     margin: 0px;
@@ -90,25 +95,6 @@ body{
      font-family: sans-serif;
 
 }
-/*
-.job-detail-container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-end;
-    gap: 10px;
-    padding: 2rem;
-    margin-right:-430px;
-    position: relative;
-    width: 900px;
-    margin-top: -1015px;
-    background-color: #ffffff;
-    box-shadow: 0 0 10px #fcb900;
-  border-radius: 10px;
-  align-content: flex-end;
-  justify-content: space-between;
-
-} */
 
 .job-detail-container{
   display: grid;
@@ -172,6 +158,11 @@ body{
   
 }
 
+.nav-icons-container{
+  display: flex;
+
+}
+
 .heart-container{
   display: flex;
   position: relative;
@@ -218,18 +209,17 @@ body{
 
 .job-detail-tags-container{
   display: flex;
-  flex-direction: row;
-  margin-right: -435px;
-  margin-top: 30px;
-  margin-bottom: -20px;
-  padding: 20px;
-  height: 5vh;
-  width: 933px;
-  gap: 10%;
-  border-radius: 10px;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: #366cbd;
+    flex-direction: row;
+    margin-right: -435px;
+    margin-top: 30px;
+    margin-bottom: -20px;
+    padding: 20px;
+    height: 5vh;
+    width: 970px;
+    border-radius: 10px;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #366cbd;
 }
 
 .job-detail-tags-container li{
@@ -383,7 +373,7 @@ background-color: #ffffff;
   justify-content: center;
   align-items: center;
   height: 180%;
-  width: 20%;
+  width: 23%;
   background-color: lightgray;
   border-radius: 10px;
   box-shadow: 0 0 10px gray;
@@ -395,7 +385,10 @@ background-color: #ffffff;
 
 
 .job-1,.job-2,.job-3,.job-4{
-    background-color: #ffffff;
+  background-color: #ffffff;
+  border: 1px solid lightgray;
+  padding: 15px;
+  border-radius: 10px;
 }
 
 h2,h3,h4,h5,h6,p{
